# python-project-49

./: .pyproject.toml.swp  Makefile  README.md  pyproject.toml
brain_games/: .swp  cli.py  engine.py  question.py
brain_games/games/: calc.py  even.py  gcd.py  prime.py  progression.py
brain_games/scripts/: .brain_gcd.py.swp  .brain_prime.py.swo  brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
