[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Denis Kerov <denis.kerov@yandex.ru>"]
packages = [
  { include = "brain_games" },
]

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
flake8 = "^6.0.0"

[tool.poetry.dependencies]
python = "^3.10"
prompt = "^0.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
